--- a/Authenticate level-wise/package.json
+++ b/Authenticate level-wise/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "07-auth-session",
+  "name": "11-authenticate-2",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -10,13 +10,11 @@
   "author": "jonty tejani",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.5",
-    "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "express-session": "^1.17.1",
-    "mongoose": "^5.12.1",
+    "mongoose": "^5.12.4",
+    "mongoose-encryption": "^2.1.0",
     "nodemon": "^2.0.7"
   }
 }
